--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn
-pydantic
-requests
-openai
-
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+openai==1.12.0
+pydantic==2.6.0
+requests==2.31.0
+python-dotenv==1.0.0
